force-app/encryption/objects/Encryption_Key__mdt/Encryption_Key__mdt.object-meta.xml
<CustomObject>
    <label>Encryption Key</label>
    <pluralLabel>Encryption Keys</pluralLabel>
    <description>Keys for encrypting and decrypting data.</description>
</CustomObject>