force-app/encryption/objects/Encryption_Key__mdt/fields/Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Algorithm__c</fullName>
    <description>Encryption algorithm to use with the key</description>
    <inlineHelpText>Encryption algorithm to use with the key</inlineHelpText>
    <label>Algorithm</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>