force-app/encryption/objects/Encryption_Key__mdt/fields/Initialization_Vector__c.field-meta.xml
<CustomField>
    <fullName>Initialization_Vector__c</fullName>
    <description>Initialization vector for the encryption key.</description>
    <inlineHelpText>Initialization vector for the encryption key.</inlineHelpText>
    <label>Initialization Vector</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>