force-app/encryption/objects/Encryption_Key__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Value of the encryption key.</description>
    <inlineHelpText>Value of the encryption key.</inlineHelpText>
    <label>Key</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>